# --- injected for the standalone mirror by tools/copybara/copy.bara.sky ---
[workspace]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/hopmesh/hop"

[workspace.dependencies]
hop-core = { version = "0.0.1", package = "hop-mesh-core" }
hop-endpoint-core = { version = "0.0.1", package = "hop-mesh-endpoint-core" }
hop-store-sqlite = { version = "0.0.1", default-features = false, package = "hop-mesh-store-sqlite" }
hop-store-firestore = { version = "0.0.1", package = "hop-mesh-store-firestore" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
sha2 = "0.11"
ed25519-dalek = { version = "3", features = ["rand_core"] }
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
miniz_oxide = "0.9"
snow = "0.10"
rusqlite = { version = "0.40", features = ["bundled"] }
# --- end injected preamble ---
[package]
name = "hop-mesh-store-sqlite"
version.workspace = true
edition.workspace = true
license-file = "LICENSE.md"
repository.workspace = true
description = "Persistent SQLite Store backend for Hop (DESIGN.md §13.2)."

[dependencies]
hop-core.workspace = true
# F-25: rusqlite is declared locally (not via the workspace dep) so its bundling can be feature-gated:
# `bundled` = plain SQLite (default, fast build); `sqlcipher` = SQLite + SQLCipher (encrypted at rest,
# keyed via `SqliteStore::open_keyed`), which vendors OpenSSL and needs a C toolchain + perl to build.
rusqlite = { version = "0.40", default-features = false }
# stores-12: zeroize the hex-formatted SQLCipher key material after the PRAGMA runs, so the
# at-rest key does not linger in unzeroized heap allocations for the process lifetime.
zeroize = "1"

[features]
default = ["bundled"]
bundled = ["rusqlite/bundled"]
sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
